CREATE TABLE "Area" (
	"Id"	INTEGER NOT NULL,
	"Name"	TEXT NOT NULL UNIQUE,
	PRIMARY KEY("Id" AUTOINCREMENT)
);
CREATE TABLE sqlite_sequence(name,seq);
CREATE TABLE "Path" (
	"Id"	INTEGER NOT NULL,
	"StartAreaId"	INTEGER NOT NULL,
	"EndAreaId"	INTEGER NOT NULL,
	"Distance"	NUMERIC NOT NULL,
	"DangerLevel"	INTEGER NOT NULL DEFAULT 0,
	"DangerProbability"	NUMERIC NOT NULL DEFAULT 0,
	PRIMARY KEY("Id" AUTOINCREMENT),
	FOREIGN KEY("EndAreaId") REFERENCES "Area"("Id"),
	FOREIGN KEY("StartAreaId") REFERENCES "Area"("Id")
);
CREATE TABLE "Route" (
	"Id"	INTEGER NOT NULL,
	"Name"	TEXT NOT NULL UNIQUE,
	PRIMARY KEY("Id" AUTOINCREMENT)
);
CREATE TABLE "RoutePath" (
	"Id"	INTEGER NOT NULL,
	"RouteId"	INTEGER NOT NULL,
	"Sequence"	INTEGER NOT NULL,
	"PathId"	INTEGER NOT NULL,
	PRIMARY KEY("Id" AUTOINCREMENT),
	FOREIGN KEY("PathId") REFERENCES "Path"("Id"),
	FOREIGN KEY("RouteId") REFERENCES "Route"("Id")
);
CREATE TABLE "Character" (
	"Id"	INTEGER NOT NULL,
	"Name"	TEXT NOT NULL UNIQUE,
	"Level"	INTEGER NOT NULL DEFAULT 0,
	"Experience"	INTEGER NOT NULL DEFAULT 0,
	"CurrentHealth"	INTEGER NOT NULL DEFAULT 100,
	"MaxHealth"	INTEGER NOT NULL DEFAULT 100,
	"CurrentAreaId"	INTEGER NOT NULL,
	PRIMARY KEY("Id" AUTOINCREMENT),
	FOREIGN KEY("CurrentAreaId") REFERENCES "Area"("Id")
);
CREATE TABLE "AreaEvent" (
	"Id"	INTEGER NOT NULL,
	"AreaId"	INTEGER NOT NULL,
	"Timestamp"	TEXT NOT NULL,
	"Description"	TEXT NOT NULL,
	PRIMARY KEY("Id" AUTOINCREMENT),
	FOREIGN KEY("AreaId") REFERENCES "Area"("Id")
);
CREATE TABLE "CharacterEvent" (
	"Id"	INTEGER NOT NULL,
	"CharacterId"	INTEGER NOT NULL,
	"Timestamp"	TEXT NOT NULL,
	"Description"	TEXT NOT NULL,
	PRIMARY KEY("Id" AUTOINCREMENT),
	FOREIGN KEY("CharacterId") REFERENCES "Character"("Id")
);
